	(expression): Rule for typeof.
	* libpoke/pkl-lex.l: Handle token TYPEOF.
	* libpoke/pkl-typify.c (pkl_typify1_pr_op_typeof): New handler.
	(pkl_phase_typify1): Register handler.
	* libpoke/pkl-gen.h (PKL_GEN_CTX_IN_TYPIFIER): Define.
	* libpoke/pkl-gen.c (pkl_phase_gen_or_typeof): New handler.
	(pkl_phase_gen): Register handler.
	(pkl_gen_ps_type_integral): Handle IN_TYPIFIER.
	* libpoke/pkl-gen.pks (integral_typifier): New macro.

2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Check that every .function has a prolog
	instruction.

2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke-dark.css: Renamed from poke-default.css.
	* etc/poke-bright.css: New file.
	* etc/Makefile.am (dist_pkgdata_DATA): Rename poke-dar.css and add
	poke-bright.css.
	* poke/poke.c (print_help): Add --help output for --style-dark and
	--style-bright.
	* poke/pk-term.c (pk_term_init): Use poke-dark.css or
	poke-bright.css depending on the default setting.
	* doc/poke.texi (Invoking poke): Document --style-dark and
	--style-bright.

2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/cast-any-to-function-diag-1.pk: Update
	expected error.
	* testsuite/poke.pkl/cast-void-diag-1.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-diag-3.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-diag-2.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-diag-1.pk: Likewise.
	* testsuite/poke.pkl/cast-str-diag-1.pk: Likewise.
	* testsuite/poke.pkl/cast-diag-9.pk: New test.
	* testsuite/poke.pkl/cast-diag-10.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_cond_exp): Fix diagnostics.
	* testsuite/poke.pkl/cond-exp-diag-1.pk: Update expected error.

2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/if-diag-3.pk: Likewise.

	* testsuite/poke.pkl/if-diag-2.pk: Likewise.

	* testsuite/poke.pkl/if-diag-1.pk: Update expected error.
