@@ -16,6 +16,7 @@
 	* libpoke/pkl-gen.c (pkl_phase_gen_or_typeof): New handler.
 	(pkl_phase_gen): Register handler.
 	(pkl_gen_ps_type_integral): Handle IN_TYPIFIER.
+	(pkl_gen_pr_type_offset): Handle IN_TYPIFIER.
 	* libpoke/pkl-gen.pks (integral_typifier): New macro.
 
 2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>
